# market-dashboard

./: .gitignore  .safe_env  LICENSE  README.md  dashboard.ipynb  dashboard_db.ipynb  db_ops.py  environment.yml  initialize_db.ipynb  pyproject.toml  requirements.txt  single_file_dashboard.py  stonks.db
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  tests.yml
archive/: dashboard.ipynb  initialize_db.ipynb  prophet.ipynb
src/innov8/: __main__.py  app.py  db_ops.py  layout.py  run.py  server.py  single_file_dashboard.py  sp500_tickers.txt  update_all.py
src/innov8/assets/: main.css  utils.js
src/innov8/components/: __init__.py  charts_52w.py  decorators.py  dropdowns.py  forcast.py  initial_load.py  intra_sector.py  main_carousel.py  price_card.py  price_chart.py  themes.py  update.py
src/innov8/decorators/: data_access.py
tests/: test_callbacks.py  test_components.py  test_db_ops.py
