[project]
name = "innov8"
version = "0.0.1"
description = "an interactive market dashboard"
authors = [
    {name = "mayushii21", email = "122178787+mayushii21@users.noreply.github.com"},
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "yfinance",
    "ipykernel",
    "nbformat",
    "dash",
    "dash-bootstrap-components",
    "dash-bootstrap-templates",
    "dash-trich-components",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause license"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
innov8 = 'innov8.single_file_dashboard:main'
