[project]
name = "innov8"
version = "0.1.0-beta"
description = "an interactive market dashboard"
authors = [
    {name = "mayushii21", email = "122178787+mayushii21@users.noreply.github.com"},
]
dependencies = [
    "dash[diskcache]==2.16.1",
    "dash-bootstrap-components",
    "dash-bootstrap-templates",
    "dash-tvlwc>=0.1.1",
    "dash-trich-components",
    "requests",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "yfinance",
    "tqdm",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
innov8 = 'innov8.run:cli'

[project.urls]
Homepage = "http://innov8finance.pythonanywhere.com/"
Repository = "https://github.com/mayushii21/market-dashboard"
"Bug Tracker" = "https://github.com/mayushii21/market-dashboard/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
